fix data init